# eva_tools

./: README.md
evaluator/: CMakeLists.txt  package.xml
evaluator/config/: config_kitti.yaml  descriptor.yaml
evaluator/include/: KDTreeVectorOfVectorsAdaptor.h  debug_utility.h  kitti_label_color.h  nanoflann_pcl.h  utility.h
evaluator/include/descriptor/: IScancontext.hpp  SScancontext.hpp  Scancontext.hpp  descriptor.h
evaluator/launch/: evaluate_loopclosure.launch
evaluator/src/: evaluateLC.cpp  evaluateLC_copy.cpp  generateMap.cpp  generateMap_save.cpp
